# django-makemessages-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
locale/en/LC_MESSAGES/: django.po
python/: pyproject.toml
python/django_makemessages_rs/: __main__.py
src/: extractor.rs  main.rs  po.rs  walker.rs
tests/: integration_test.sh
