[package]
name = "django-makemessages-rs"
version = "0.1.0"
edition = "2021"
description = "A fast Rust replacement for Django's makemessages command"
license = "MIT"

[[bin]]
name = "django-makemessages-rs"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
rayon = "1"
anyhow = "1"
indexmap = "2"
fancy-regex = "0.17.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
