[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "django-makemessages-rs"
version = "0.2.0"
description = "A fast Rust replacement for Django's makemessages command (~60x faster)"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
bindings = "bin"
module-name = "django_makemessages_rs"
