[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "django-makemessages-rs"
version = "0.2.0"
description = "A fast Rust alternative to Django's makemessages command"
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "django",
    "makemessages",
    "i18n",
    "l10n",
    "internationalization",
    "localization",
    "gettext",
    "translation",
    "po",
    "rust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]

[project.urls]
Homepage = "https://github.com/zxzinn/django-makemessages-rs"
Repository = "https://github.com/zxzinn/django-makemessages-rs"
Issues = "https://github.com/zxzinn/django-makemessages-rs/issues"

[tool.maturin]
bindings = "bin"
module-name = "django_makemessages_rs"
